# config-server

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  config.rs  error.rs  lib.rs
example/: Cargo.toml
example/src/: main.rs
server/: Cargo.toml
server/configs/: application-dev.yml  application-prod.yml  application.yml  myapp.yml
server/src/: lib.rs  main.rs
server/src/config/: mod.rs  server.rs
server/src/handlers/: config.rs  health.rs  metrics.rs  mod.rs
server/src/models/: config.rs
server/src/repository/: file.rs  git.rs  mod.rs
server/src/utils/: encryption.rs
