[package]
name = "config-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.19"
prometheus = "0.13"
walkdir = "2.0"
notify = "6.0"
dashmap = "6.0"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
